--- a/PowerDistributionSystem/PowerDistributionSystem.csproj
+++ b/PowerDistributionSystem/PowerDistributionSystem.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +45,7 @@
   <ItemGroup>
     <Compile Include="IDistributionCenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Uredjaj.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
