--- a/HydroelectricPowerPlant/HydroelectricPowerPlant.csproj
+++ b/HydroelectricPowerPlant/HydroelectricPowerPlant.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Elektrana.cs" />
+    <Compile Include="HydroelectricPowerPlantDataBase.cs" />
     <Compile Include="HydroelectricPowerPlantServices.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
